--- a/index.html
+++ b/index.html
@@ -16,13 +16,27 @@
     <button onclick="onPanTo()" class="btn-pan">Pan Map to Tokyo</button>
 
     <p>You are at: <span class="user-pos"></span></p>
+
     <p>Locations:
-    <pre class="locs"></pre>
-    </p>
+    <table>
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Lat</th>
+                <th>Lng</th>
+                <th>CreatedAt</th>
+                <th>UpdateAt</th>
+            </tr>
+        </thead>
+        <tbody class="locs">
+
+        </tbody>
+        </p>
 
 
-    <script src="lib/axios.js"></script>
-    <script type="module" src="js/app.controller.js"></script>
+        <script src="lib/axios.js"></script>
+        <script type="module" src="js/app.controller.js"></script>
 </body>
 
 </html>
