--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
     <button onclick="onPanTo()" class="btn-pan">Pan Map to Tokyo</button>
+    <button onclick="goToMyLocation()" class="btn-myLoc">My-location</button>
     <p>You are at: <span class="user-pos"></span></p>
 
     <p>Locations:
@@ -26,10 +27,12 @@
                 <th>Lng</th>
                 <th>CreatedAt</th>
                 <th>UpdateAt</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody class="locs">
-
+            <tr>
+            </tr>
         </tbody>
         </p>
 
