--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
     <button onclick="onPanTo()" class="btn-pan">Pan Map to Tokyo</button>
     <button onclick="goToMyLocation()" class="btn-myLoc">My-location</button>
+    <input type="search" onchange="onSearchLoc(this.value)">
     <p>You are at: <span class="user-pos"></span></p>
 
     <p>Locations:
