--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
-    <button onclick="onPanTo()" class="btn-pan">Pan Map to Tokyo</button>
+    <button onclick="onPanTo()" class="btn-pan">Pan to</button>
     <button onclick="goToMyLocation()" class="btn-myLoc">My-location</button>
     <input type="search" onchange="onSearchLoc(this.value)">
+    <button onclick="onCopyLink()">Copy link</button>
     <p>You are at: <span class="user-pos"></span></p>
 
     <p>Locations:
